feat: dynamic tree update and lazy node load